--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "1-app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+	"name": "node",
+	"version": "1.0.0",
+	"description": "",
+	"main": "1-app.js",
+	"scripts": {
+		"start": "node 1-app.js",
+		"dev": "nodemon 11-nodemon.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"lodash": "^4.17.21"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
